<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="79dp"
        android:hint="@string/name1"
        android:inputType=""
        android:textColor="@color/colorAccent"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/pword"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="163dp"
        android:ems="10"
        android:hint="@string/pword"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:gravity="center_horizontal"
        android:textSize="34sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="126dp"
        android:layout_marginStart="18dp"
        android:text="@string/register"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="218dp"
        android:layout_marginEnd="0dp"
        android:ems="10"
        android:hint="@string/confirm"
        android:inputType="textPassword"
        android:layout_alignParentRight="true"
        android:layout_marginRight="0dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="121dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/register"
        android:layout_marginEnd="29dp"
        android:text="@string/login1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="29dp" />

</RelativeLayout>
