<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
    <!--<android.support.v7.widget.CardView-->
    <!--android:id="@+id/user_layout"-->
    <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--card_view:cardCornerRadius="5dp">-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:background="@android:color/holo_blue_dark"
        android:padding="8dp"
        tools:targetApi="o">

        <LinearLayout
            android:id="@+id/cal"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:text="@string/date"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/ts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/cal"
            android:layout_toRightOf="@+id/cal"
            android:ellipsize="end"
            android:maxLength="16"
            android:maxLines="1"
            android:text="@string/ini_textview"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/month"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/cal"
            android:background="@color/colorAccent"
            android:text="@string/month"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ts"
            android:layout_toEndOf="@+id/cal"
            android:layout_toRightOf="@+id/cal"
            android:ellipsize="end"
            android:maxLength="24"
            android:maxLines="1"
            android:text="@string/ini_textview"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </RelativeLayout>
    <!--</android.support.v7.widget.CardView>-->
</LinearLayout>